tutorial/openkruise/cloneset/gray_release_ingress/1.cloneset_v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-v1
  labels:
    app: nginx-demo-v1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-demo-v1
