tutorial/openkruise/cloneset/gray_release_ingress/2.cloneset_ingress_v1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-demo-v1
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: nginx-demo.myapp.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-demo-v1
          servicePort: 80
