tutorial/openkruise/cloneset/gray_release_ingress/6.cloneset_ingress_v2_100percent.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-demo-v2
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "100"
spec:
  rules:
  - host: nginx-demo.myapp.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-demo-v2
          servicePort: 80
